# task-streamer

./: .gitignore  Cargo.toml  Dockerfile
src/: app.rs  cli.rs  client.rs  config.rs  error.rs  lib.rs  main.rs  schema.rs  session.rs  tasks.rs
tests/: integration_tests.rs
