[package]
name = "task-streamer"
version = "0.1.0"
authors = ["Matt Chun-Lum <matt@questionable.engineering>"]
edition = "2018"

[profile.release]
lto = true

[dependencies]
actix = "0.10.0"
actix-web = "3"
actix-web-actors = "3"
clap = "*"
config = "0.10"
dirs = "3.0.1"
env_logger = "0.8.2"
log = "*"
shlex = "0.1.1"
serde = "1.0.117"
serde_derive = "1.0.117"
task-hookrs = "*"
uuid = { version = "0.8.1", features = ["v4"] }
