[package]
name = "task-streamer"
version = "0.1.0"
authors = ["Matt Chun-Lum <matt@questionable.engineering>"]
edition = "2018"

[lib]
name = "task_streamer"
path = "src/lib.rs"

[[bin]]
name = "task-streamer"
path = "src/main.rs"

[profile.release]
lto = true

[dependencies]
actix = "0.10.0"
actix-cors = "0.5.3"
actix-web = "3"
actix-web-actors = "3"
actix-web-httpauth = "*"
clap = "*"
config = "0.10"
dirs = "3.0.1"
env_logger = "0.8.2"
log = "*"
reqwest = { version = "0.10", features = ["blocking", "json"] }
serde = "1.0.117"
serde_derive = "1.0.117"
serde_json = "1.0"
shlex = "0.1.1"
task-hookrs = "*"
uuid = { version = "0.8.1", features = ["v4"] }
